# artifacts-rs

./: .openapi-generator-ignore  Cargo.toml  Makefile  README.md  generate.sh  generator-config.yaml
artifacts-codegen/: README.md  pom.xml
scripts/: print_op_ids.ts
spec/: openapi.json
src/: lib.rs  main.rs  traits.rs
src/apis/: accounts_api.rs  achievements_api.rs  badges_api.rs  characters_api.rs  configuration.rs  default_api.rs  effects_api.rs  events_api.rs  grand_exchange_api.rs  items_api.rs  leaderboard_api.rs  maps_api.rs  mod.rs  monsters_api.rs  my_account_api.rs  my_characters_api.rs  npcs_api.rs  resources_api.rs  tasks_api.rs  token_api.rs
src/models/: account_achievement_schema.rs  account_details.rs  account_details_schema.rs  account_leaderboard_schema.rs  account_leaderboard_type.rs  account_status.rs  achievement_response_schema.rs  achievement_rewards_schema.rs  achievement_schema.rs  achievement_type.rs  action_item_bank_response_schema.rs  action_type.rs  active_event_schema.rs  add_account_schema.rs  add_character_schema.rs  announcement_schema.rs  badge_condition_schema.rs  badge_response_schema.rs  badge_schema.rs  bank_extension_schema.rs  bank_extension_transaction_response_schema.rs  bank_extension_transaction_schema.rs  bank_gold_transaction_response_schema.rs  bank_gold_transaction_schema.rs  bank_item_schema.rs  bank_item_transaction_response_schema.rs  bank_item_transaction_schema.rs  bank_response_schema.rs  bank_schema.rs  change_password.rs  (+173 more)
template/: lib.mustache  model.mustache  model_mod.mustache  partial_header.mustache
(+11 files in other folders)
