[package]
name = "archaeologist"
description = "Rust client for Artifacts"
version = "0.1.0"
authors = ["Enochen"]
license = "MIT"
edition = "2021"
keywords = ["artifactsmmo"]
repository = "https://github.com/Enochen/archaeologist"
readme = "README.md"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = [
  "base64",
  "std",
  "macros",
] }
serde_json = "^1.0"
url = "^2.5"
reqwest = { version = "^0.12", features = ["json", "multipart"] }
