[package]
name = "artifacts-rs"
description = "Rust client for Artifacts"
version = "1.4.0"
authors = ["Enochen"]
license = "MIT"
edition = "2021"
keywords = ["artifactsmmo", "artifacts", "client"]
repository = "https://github.com/Enochen/artifacts-rs"
readme = "README.md"

[lib]
name = "artifacts"
path = "src/lib.rs"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = [
  "base64",
  "std",
  "macros",
] }
serde_json = "^1.0"
url = "^2.5"
reqwest = { version = "^0.12", features = ["json", "multipart"] }
specta = { version = "2.0.0-rc.22", optional = true }
